Change header and footer to fixed size for spacing

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
 #footer {
     display: flex;
     flex-direction: row;
-    flex: 1;
+    flex-basis: 200px;
     width: 100%;
 }
 
